Reset game button. More dialogue linking. Play animation sound notify was reset with no sound cues so had to update them all. Dialogue update and finialisation for game invitation and dialogue linking.
New debug button which is an actual input action so can be used in shipped version of the game that just resets the game the same way the game completed reset button does.

Play animation sound notify instances were reset resulting in no sound from them so changed these back. Will need to check these again when going to build to make sure they are right for the built version.

Dialogue updates and changes and everything should be working as intended now according to the script.
You can still interrupt the dialogue chains with starting a game but thats staying in since the player is the centre of the game and otherwise we're going to have more bugs anyway so yea.

--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -387,7 +387,7 @@ Actor=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValue
 DecalActor=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,K2Node_CallFunction.Inputs.CEE7E6744D762D353F3FB3BF63CA95C8,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList,BP_NPC_C.Collision.Collision,BP_CardPile_C.TransformCommon.Transform
 MeshComponent=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup
 BP_Dart_Board_C=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList,BP_NPC_C.Collision.Collision,BP_CardPile_C.TransformCommon.Transform
-BP_Player_C=
+BP_Player_C=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,K2Node_CallFunction.Inputs.CEE7E6744D762D353F3FB3BF63CA95C8,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList,BP_NPC_C.Collision.Collision,BP_CardPile_C.TransformCommon.Transform
 BP_Pool_Game_Manager_C=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,K2Node_CallFunction.Inputs.CEE7E6744D762D353F3FB3BF63CA95C8,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList,BP_NPC_C.Collision.Collision,BP_CardPile_C.TransformCommon.Transform
 NPC Hit Ball=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
 NPC Hit Ball_23=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
@@ -446,7 +446,7 @@ BP_PoolTable_C=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.Def
 WidgetComponent=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,K2Node_CallFunction.Inputs.CEE7E6744D762D353F3FB3BF63CA95C8,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList,BP_NPC_C.Collision.Collision,BP_CardPile_C.TransformCommon.Transform,WidgetComponent.Physics.ConstraintsGroup
 WBP_Pool_Start_Game_C=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,K2Node_CallFunction.Inputs.CEE7E6744D762D353F3FB3BF63CA95C8,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList,BP_NPC_C.Collision.Collision,BP_CardPile_C.TransformCommon.Transform
 InputMappingContext=InputMappingContext.Mappings.ActionMappings
-InputAction=
+InputAction=InputMappingContext.Mappings.ActionMappings
 
 [ContentBrowser]
 SequenceBrowser.ThumbnailSize=2
@@ -1638,7 +1638,7 @@ PhysicsAssetEditor.LastCompileMethod=Unknown
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+Object="\"Object\" "
 GeneralProjectSettings="\"Object\" "
 CryptoKeysSettings="\"Object\" "
 GameplayTagsSettings="\"Object\" "
@@ -1762,7 +1762,7 @@ UdpMessagingSettings="\"Object\" "
 WmfMediaSettings="\"Object\" "
 PersonaPreviewSceneDescription="\"Object\" "
 PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
-DataAsset="\"Object\" "
+DataAsset="\"Object\" \"Object.SkeletalMeshes\" "
 AssetViewerSettings="\"Object\" "
 ABP_NPC_C="\"Object\" "
 AnimInstance="\"Object\" "
@@ -1778,16 +1778,16 @@ AnimGraphNode_BlendListBase="\"Object\" "
 AnimGraphNode_BlendListByInt="\"Object\" "
 SkeletalMeshComponent="\"Object\" "
 SkinnedMeshComponent="\"Object\" "
-MeshComponent="\"Object\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+MeshComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
 WBP_Drink_Names_C="\"Object\" "
-UserWidget="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-Widget="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-Visual="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+UserWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.ForegroundColor\" \"Object.Appearance.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+Widget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.ForegroundColor\" \"Object.Appearance.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+Visual="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.ForegroundColor\" \"Object.Appearance.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 SpringArmComponent="\"Object\" "
-WBP_NPC_Game_Availability_Indicator_C="\"Object\" "
+WBP_NPC_Game_Availability_Indicator_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.ForegroundColor\" \"Object.Appearance.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 BP_Dialogue_Link_C="\"Object\" "
 AnimNotify="\"Object\" "
 DataTable="\"Object\" "
@@ -1846,8 +1846,8 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BrushComponent="\"Object\" "
 BP_NPC_C="\"Object\" \"Object.Actor.Tags\" "
-Character="\"Object\" "
-Pawn="\"Object\" "
+Character="\"Object\" \"Object.Actor.Tags\" "
+Pawn="\"Object\" \"Object.Actor.Tags\" "
 SpotLight="\"Object\" \"Object.Actor.Tags\" "
 Light="\"Object\" \"Object.Actor.Tags\" "
 RectLight="\"Object\" \"Object.Actor.Tags\" "
@@ -1979,50 +1979,63 @@ BP_End_Conversation_C="\"Object\" "
 RecastNavMesh="\"Object\" "
 NavigationData="\"Object\" "
 WBP_Button_Prompt_C="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[8]\" "
+InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[1]\" "
 InputAction="\"Object\" "
 BP_PoolTable_C="\"Object\" \"Object.Actor.Tags\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
 RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
 RecentAssetEditors=EnumEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=MaterialEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=DataTableEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=GenericAssetEditor
-OpenAssetsAtExit=/Game/Mini_Games/Pool/Pool_Table/BP_PoolTable.BP_PoolTable
-OpenAssetsAtExit=/Game/Mini_Games/Pool/BP_Pool_Game_Manager.BP_Pool_Game_Manager
-OpenAssetsAtExit=/Game/Mini_Games/Pool/BP_CueBall.BP_CueBall
-OpenAssetsAtExit=/Game/UI/Diegetic/Mini_Games/Darts/WBP_Darts_Start_Game.WBP_Darts_Start_Game
-OpenAssetsAtExit=/Game/UI/Diegetic/Mini_Games/Pool/WBP_Pool_Start_Game.WBP_Pool_Start_Game
-OpenAssetsAtExit=/Game/Modes_Instances/Modes/GM_Bar.GM_Bar
+OpenAssetsAtExit=/Game/Player/Input/IMC/IMC_Auction.IMC_Auction
+OpenAssetsAtExit=/Game/Player/Input/IMC/IMC_Bar.IMC_Bar
+OpenAssetsAtExit=/Game/Player/Input/IMC/IMC_Darts.IMC_Darts
+OpenAssetsAtExit=/Game/Player/Input/IMC/IMC_I_Doubt_It.IMC_I_Doubt_It
+OpenAssetsAtExit=/Game/Player/Input/IMC/IMC_Main_Menu.IMC_Main_Menu
+OpenAssetsAtExit=/Game/Player/Input/IMC/IMC_Pool.IMC_Pool
+OpenAssetsAtExit=/Game/Player/Input/IMC/IMC_Rat_Screw.IMC_Rat_Screw
+OpenAssetsAtExit=/Game/Player/Input/IMC/IMC_Rules.IMC_Rules
 OpenAssetsAtExit=/Game/Player/BP_Player.BP_Player
+OpenAssetsAtExit=/Game/UI/Non_Diegetic/WBP_Game_Completed.WBP_Game_Completed
+OpenAssetsAtExit=/Game/NPCs/Dialogue_Specific/DT_Dialogue.DT_Dialogue
+OpenAssetsAtExit=/Game/NPCs/Animations/Assets/Biel/Dialogue/Game_Invitations/Biel_Idle_4_Base_pose_Sofa_Play_Biel_154.Biel_Idle_4_Base_pose_Sofa_Play_Biel_154
+OpenAssetsAtExit=/Game/NPCs/Animations/Animation_Blueprints/ABP_NPC.ABP_NPC
+OpenAssetsAtExit=/Game/NPCs/BP_NPC.BP_NPC
+OpenAssetsAtExit=/Game/NPCs/Enums/Enum_Character_Specific_Actions.Enum_Character_Specific_Actions
+OpenAssetsAtExit=/Game/NPCs/Dialogue_Specific/BP_NPC_Conversation_Manager.BP_NPC_Conversation_Manager
+OpenAssetsAtExit=/Game/NPCs/Animations/BP_Play_Animation_Sound.BP_Play_Animation_Sound
+OpenAssetsAtExit=/Game/UI/Diegetic/NPCs/WBP_NPC_Game_Availability_Indicator.WBP_NPC_Game_Availability_Indicator
+OpenAssetsAtExit=/Game/UI/Diegetic/Menus/BP_Main_Menu.BP_Main_Menu
+OpenAssetsAtExit=/Game/NPCs/BPI_NPC_Opponent.BPI_NPC_Opponent
 None=======
 None=======
 None=======
@@ -2046,36 +2059,36 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/Maps/Test_Level/ThirdPersonMap.ThirdPersonMap", ()))
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Modes_Instances/Modes/GM_Bar
-MRUItem1=/Game/Player/BP_Player
-MRUItem2=/Game/Player/Input/IMC/IMC_Pool
-MRUItem3=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Button_Prompt
-MRUItem4=/Game/UI/Non_Diegetic/Button_Prompts/BPI_Button_Prompt
-MRUItem5=/Game/UI/Non_Diegetic/Button_Prompts/Enum_Button_Prompt
-MRUItem6=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Pool_Prompts
-MRUItem7=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Rat_Screw_Prompts
-MRUItem8=/Game/UI/Diegetic/Mini_Games/Pool/WBP_Pool_Start_Game
-MRUItem9=/Game/UI/Diegetic/Mini_Games/Darts/WBP_Darts_Start_Game
-MRUItem10=/Game/Mini_Games/Pool/BP_CueBall
-MRUItem11=/Game/Mini_Games/Pool/BP_Pool_Game_Manager
-MRUItem12=/Game/Mini_Games/Pool/Pool_Table/BP_PoolTable
-MRUItem13=/Game/Maps/Main_Level/Main_Level
-MRUItem14=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_2_to_Biel
-MRUItem15=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_108_to_Biel
-MRUItem16=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_3_to_Biel
-MRUItem17=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_60_to_Zilia
-MRUItem18=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_66_to_Zilia
-MRUItem19=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_12_to_Dante
-MRUItem20=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_13_to_Dante
-MRUItem21=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_5_to_Biel
-MRUItem22=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_6_to_Biel
-MRUItem23=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_9_to_Dante
-MRUItem24=/Game/NPCs/Animations/Assets/Biel/Dialogue/NPC-NPC/Biel_Idle_4_Base_Pose_Sofa_Dialogues_B2Z_Biel_72
-MRUItem25=/Game/NPCs/Animations/Assets/Biel/Dialogue/NPC-NPC/Biel_Idle_4_Base_Pose_Sofa_Dialogues_B2D_Biel_74
-MRUItem26=/Game/NPCs/Dialogue_Specific/DT_Dialogue
-MRUItem27=/Game/NPCs/Animations/BP_End_Conversation
-MRUItem28=/Game/NPCs/Dialogue_Specific/BP_NPC_Conversation_Manager
-MRUItem29=/Game/SFX/SA_SFX
+MRUItem0=/Game/NPCs/Animations/Assets/Biel/Dialogue/Game_Invitations/Biel_Idle_4_Base_pose_Sofa_Play_Biel_154
+MRUItem1=/Game/NPCs/Animations/Assets/Biel/Dialogue/NPC-NPC/Biel_Idle_4_Base_Pose_Sofa_Dialogues_B2D_Biel_73
+MRUItem2=/Game/NPCs/Animations/Assets/Biel/Dialogue/NPC-NPC/Biel_Idle_4_Base_Pose_Sofa_Dialogues_B2D_Biel_74
+MRUItem3=/Game/NPCs/BPI_NPC_Opponent
+MRUItem4=/Game/NPCs/Animations/Assets/Biel/Dialogue/Game_Invitations/Biel_Idle_4_Base_Pose_Sofa_Play_Biel_11
+MRUItem5=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_108_to_Biel
+MRUItem6=/Game/UI/Diegetic/Menus/BP_Main_Menu
+MRUItem7=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_13_to_Dante
+MRUItem8=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_6_to_Biel
+MRUItem9=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_2_to_Biel
+MRUItem10=/Game/UI/Diegetic/NPCs/WBP_NPC_Game_Availability_Indicator
+MRUItem11=/Game/NPCs/Animations/Assets/Zilia/Idle/zilia_pose_drinking
+MRUItem12=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_5_to_Biel
+MRUItem13=/Game/NPCs/Animations/Assets/Dante/Dante_drink_making
+MRUItem14=/Game/NPCs/Animations/BP_Play_Animation_Sound
+MRUItem15=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_60_to_Zilia
+MRUItem16=/Game/NPCs/Dialogue_Specific/BP_NPC_Conversation_Manager
+MRUItem17=/Game/NPCs/Animations/Assets/Biel/Dialogue/React_To_Player/Biel_Idle_4_Base_Pose_Play_Biel_24
+MRUItem18=/Game/NPCs/Animations/Assets/Biel/Idle_Bar/Biel_Idle_1_Base_Pose_Bar_Breathe
+MRUItem19=/Game/NPCs/Animations/Assets/Biel/Idle_Bar/Biel_Idle_2_Base_Pose_Bar_Queezy
+MRUItem20=/Game/NPCs/Animations/Assets/Biel/Idle_Bar/Biel_Idle_3_Base_Pose_Bar_Leg_Cross
+MRUItem21=/Game/NPCs/Animations/Assets/Biel/Idle_Sofa/Biel_Idle_4_Base_Pose_Sofa_Play
+MRUItem22=/Game/NPCs/Animations/Assets/Biel/Idle_Sofa/Biel_Idle_3_Base_Pose_Sofa_Lay_Back
+MRUItem23=/Game/NPCs/Animations/Assets/Biel/Idle_Sofa/Biel_Idle_2_Base_Pose_Sofa_Sleep
+MRUItem24=/Game/NPCs/Animations/Assets/Biel/Idle_Sofa/Biel_Idle_1_Base_Pose_Sofa_Breathe
+MRUItem25=/Game/NPCs/Enums/Enum_Character_Specific_Actions
+MRUItem26=/Game/NPCs/Animations/Assets/Biel/Dialogue/Rat_Screw/Winning/Biel_Idle_4_Base_Pose_Play_Biel_105
+MRUItem27=/Game/NPCs/Animations/Assets/Biel/Dialogue/Rat_Screw/Winning/Biel_Idle_4_Base_Pose_Play_Biel_59
+MRUItem28=/Game/NPCs/Animations/Assets/Biel/Dialogue/Rat_Screw/Loosing-Players_Advantage/Biel_Idle_4_Base_Pose_Play_Biel_104
+MRUItem29=/Game/NPCs/Animations/Assets/Biel/Dialogue/Rat_Screw/Loosing-Players_Advantage/Biel_Idle_4_Base_Pose_Play_Biel_58
 
 [DetailCategories]
 GeneralProjectSettings.About=True
@@ -3929,6 +3942,11 @@ WBP_Button_Prompt_C.Events=True
 WBP_Button_Prompt_C.Designer=True
 InputMappingContext.Mappings=True
 InputMappingContext.Description=True
+InputAction.Description=True
+InputAction.Action=True
+InputAction.Input Consumption=True
+InputAction.User Settings=True
+BP_Play_Animation_Sound_C.Default=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -4941,4 +4959,8 @@ bResetClothWhenSimulating=False
 InstalledPlugins=MixamoAnimationRetargeting
 InstalledPlugins=VisualStudioTools
 InstalledPlugins=WMFCodecs
+
+[/Script/AssetManagerEditor.ReferenceViewerSettings]
+bEnableCollectionFilter=False
+bFindPathEnabled=False
 
