Made Select Card Button Right Size

--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -447,6 +447,7 @@ WidgetComponent=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.De
 WBP_Pool_Start_Game_C=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,K2Node_CallFunction.Inputs.CEE7E6744D762D353F3FB3BF63CA95C8,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList,BP_NPC_C.Collision.Collision,BP_CardPile_C.TransformCommon.Transform
 InputMappingContext=InputMappingContext.Mappings.ActionMappings
 InputAction=InputMappingContext.Mappings.ActionMappings
+WBP_Button_Prompt_C=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,K2Node_CallFunction.Inputs.CEE7E6744D762D353F3FB3BF63CA95C8,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList,BP_NPC_C.Collision.Collision,BP_CardPile_C.TransformCommon.Transform
 
 [ContentBrowser]
 SequenceBrowser.ThumbnailSize=2
@@ -488,7 +489,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Environment/Street_Assets/Materials/graffiti_decals
+ContentBrowserDrawer.SelectedPaths=/Game/UI/Button_Prompt_Assets/Done
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -503,7 +504,7 @@ ContentBrowserTab1.SelectedPaths=/Game/Player
 ContentBrowserTab1.SelectedPaths=/Game/NPCs
 ContentBrowserTab1.SelectedPaths=/Game/Mini_Games/Pool
 ContentBrowserTab1.SelectedPaths=/Game/SFX/FX
-ContentBrowserTab1.SelectedPaths=/Game/Modes_Instances/Modes
+ContentBrowserTab1.SelectedPaths=/Game/UI
 None=======
 None=======
 None=======
@@ -1607,10 +1608,10 @@ WidgetCarousel.TimeStamp=2025.02.25-23.40.36
 WidgetCarousel.LastCompileMethod=External
 HierarchicalLODOutliner.TimeStamp=2025.02.25-23.40.19
 HierarchicalLODOutliner.LastCompileMethod=External
-Voice.TimeStamp=2025.02.01-20.48.50
-Voice.LastCompileMethod=Unknown
-MovieSceneCapture.TimeStamp=2025.02.01-20.48.48
-MovieSceneCapture.LastCompileMethod=Unknown
+Voice.TimeStamp=2025.02.25-23.40.35
+Voice.LastCompileMethod=External
+MovieSceneCapture.TimeStamp=2025.02.25-23.40.23
+MovieSceneCapture.LastCompileMethod=External
 SkeletonEditor.TimeStamp=2025.02.01-20.48.49
 SkeletonEditor.LastCompileMethod=Unknown
 PinnedCommandList.TimeStamp=2025.02.01-20.48.48
@@ -1619,8 +1620,8 @@ ClothingSystemEditorInterface.TimeStamp=2025.02.01-20.48.46
 ClothingSystemEditorInterface.LastCompileMethod=Unknown
 AnimationEditor.TimeStamp=2025.02.01-20.48.46
 AnimationEditor.LastCompileMethod=Unknown
-SequencerWidgets.TimeStamp=2025.02.01-20.48.49
-SequencerWidgets.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2025.02.25-23.40.29
+SequencerWidgets.LastCompileMethod=External
 MaterialEditor.TimeStamp=2025.02.25-23.40.22
 MaterialEditor.LastCompileMethod=External
 TextureEditor.TimeStamp=2025.02.01-20.48.49
@@ -1638,7 +1639,7 @@ PhysicsAssetEditor.LastCompileMethod=Unknown
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 GeneralProjectSettings="\"Object\" "
 CryptoKeysSettings="\"Object\" "
 GameplayTagsSettings="\"Object\" "
@@ -1783,9 +1784,9 @@ PrimitiveComponent="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
 WBP_Drink_Names_C="\"Object\" "
-UserWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.ForegroundColor\" \"Object.Appearance.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-Widget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.ForegroundColor\" \"Object.Appearance.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-Visual="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.ForegroundColor\" \"Object.Appearance.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+UserWidget="\"Object\" "
+Widget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+Visual="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 SpringArmComponent="\"Object\" "
 WBP_NPC_Game_Availability_Indicator_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.ForegroundColor\" \"Object.Appearance.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 BP_Dialogue_Link_C="\"Object\" "
@@ -1978,14 +1979,18 @@ BP_Dialogue_Start_C="\"Object\" "
 BP_End_Conversation_C="\"Object\" "
 RecastNavMesh="\"Object\" "
 NavigationData="\"Object\" "
-WBP_Button_Prompt_C="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+WBP_Button_Prompt_C="\"Object\" "
 InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[1]\" "
 InputAction="\"Object\" "
 BP_PoolTable_C="\"Object\" \"Object.Actor.Tags\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=EnumEditor
+RecentAssetEditors=
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
@@ -2011,31 +2016,7 @@ RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
-RecentAssetEditors=EnumEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-OpenAssetsAtExit=/Game/Player/Input/IMC/IMC_Auction.IMC_Auction
-OpenAssetsAtExit=/Game/Player/Input/IMC/IMC_Bar.IMC_Bar
-OpenAssetsAtExit=/Game/Player/Input/IMC/IMC_Darts.IMC_Darts
-OpenAssetsAtExit=/Game/Player/Input/IMC/IMC_I_Doubt_It.IMC_I_Doubt_It
-OpenAssetsAtExit=/Game/Player/Input/IMC/IMC_Main_Menu.IMC_Main_Menu
-OpenAssetsAtExit=/Game/Player/Input/IMC/IMC_Pool.IMC_Pool
-OpenAssetsAtExit=/Game/Player/Input/IMC/IMC_Rat_Screw.IMC_Rat_Screw
-OpenAssetsAtExit=/Game/Player/Input/IMC/IMC_Rules.IMC_Rules
-OpenAssetsAtExit=/Game/Player/BP_Player.BP_Player
-OpenAssetsAtExit=/Game/UI/Non_Diegetic/WBP_Game_Completed.WBP_Game_Completed
-OpenAssetsAtExit=/Game/NPCs/Dialogue_Specific/DT_Dialogue.DT_Dialogue
-OpenAssetsAtExit=/Game/NPCs/Animations/Assets/Biel/Dialogue/Game_Invitations/Biel_Idle_4_Base_pose_Sofa_Play_Biel_154.Biel_Idle_4_Base_pose_Sofa_Play_Biel_154
-OpenAssetsAtExit=/Game/NPCs/Animations/Animation_Blueprints/ABP_NPC.ABP_NPC
-OpenAssetsAtExit=/Game/NPCs/BP_NPC.BP_NPC
-OpenAssetsAtExit=/Game/NPCs/Enums/Enum_Character_Specific_Actions.Enum_Character_Specific_Actions
-OpenAssetsAtExit=/Game/NPCs/Dialogue_Specific/BP_NPC_Conversation_Manager.BP_NPC_Conversation_Manager
-OpenAssetsAtExit=/Game/NPCs/Animations/BP_Play_Animation_Sound.BP_Play_Animation_Sound
-OpenAssetsAtExit=/Game/UI/Diegetic/NPCs/WBP_NPC_Game_Availability_Indicator.WBP_NPC_Game_Availability_Indicator
-OpenAssetsAtExit=/Game/UI/Diegetic/Menus/BP_Main_Menu.BP_Main_Menu
-OpenAssetsAtExit=/Game/NPCs/BPI_NPC_Opponent.BPI_NPC_Opponent
+OpenAssetsAtExit=/Game/UI/Diegetic/Main_Games/WBP_Unique_Card_Indicator_Text.WBP_Unique_Card_Indicator_Text
 None=======
 None=======
 None=======
@@ -2059,36 +2040,35 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/Maps/Test_Level/ThirdPersonMap.ThirdPersonMap", ()))
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/NPCs/Animations/Assets/Biel/Dialogue/Game_Invitations/Biel_Idle_4_Base_pose_Sofa_Play_Biel_154
-MRUItem1=/Game/NPCs/Animations/Assets/Biel/Dialogue/NPC-NPC/Biel_Idle_4_Base_Pose_Sofa_Dialogues_B2D_Biel_73
-MRUItem2=/Game/NPCs/Animations/Assets/Biel/Dialogue/NPC-NPC/Biel_Idle_4_Base_Pose_Sofa_Dialogues_B2D_Biel_74
-MRUItem3=/Game/NPCs/BPI_NPC_Opponent
-MRUItem4=/Game/NPCs/Animations/Assets/Biel/Dialogue/Game_Invitations/Biel_Idle_4_Base_Pose_Sofa_Play_Biel_11
-MRUItem5=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_108_to_Biel
-MRUItem6=/Game/UI/Diegetic/Menus/BP_Main_Menu
-MRUItem7=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_13_to_Dante
-MRUItem8=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_6_to_Biel
-MRUItem9=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_2_to_Biel
-MRUItem10=/Game/UI/Diegetic/NPCs/WBP_NPC_Game_Availability_Indicator
-MRUItem11=/Game/NPCs/Animations/Assets/Zilia/Idle/zilia_pose_drinking
-MRUItem12=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_5_to_Biel
-MRUItem13=/Game/NPCs/Animations/Assets/Dante/Dante_drink_making
-MRUItem14=/Game/NPCs/Animations/BP_Play_Animation_Sound
-MRUItem15=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_60_to_Zilia
-MRUItem16=/Game/NPCs/Dialogue_Specific/BP_NPC_Conversation_Manager
-MRUItem17=/Game/NPCs/Animations/Assets/Biel/Dialogue/React_To_Player/Biel_Idle_4_Base_Pose_Play_Biel_24
-MRUItem18=/Game/NPCs/Animations/Assets/Biel/Idle_Bar/Biel_Idle_1_Base_Pose_Bar_Breathe
-MRUItem19=/Game/NPCs/Animations/Assets/Biel/Idle_Bar/Biel_Idle_2_Base_Pose_Bar_Queezy
-MRUItem20=/Game/NPCs/Animations/Assets/Biel/Idle_Bar/Biel_Idle_3_Base_Pose_Bar_Leg_Cross
-MRUItem21=/Game/NPCs/Animations/Assets/Biel/Idle_Sofa/Biel_Idle_4_Base_Pose_Sofa_Play
-MRUItem22=/Game/NPCs/Animations/Assets/Biel/Idle_Sofa/Biel_Idle_3_Base_Pose_Sofa_Lay_Back
-MRUItem23=/Game/NPCs/Animations/Assets/Biel/Idle_Sofa/Biel_Idle_2_Base_Pose_Sofa_Sleep
-MRUItem24=/Game/NPCs/Animations/Assets/Biel/Idle_Sofa/Biel_Idle_1_Base_Pose_Sofa_Breathe
-MRUItem25=/Game/NPCs/Enums/Enum_Character_Specific_Actions
-MRUItem26=/Game/NPCs/Animations/Assets/Biel/Dialogue/Rat_Screw/Winning/Biel_Idle_4_Base_Pose_Play_Biel_105
-MRUItem27=/Game/NPCs/Animations/Assets/Biel/Dialogue/Rat_Screw/Winning/Biel_Idle_4_Base_Pose_Play_Biel_59
-MRUItem28=/Game/NPCs/Animations/Assets/Biel/Dialogue/Rat_Screw/Loosing-Players_Advantage/Biel_Idle_4_Base_Pose_Play_Biel_104
-MRUItem29=/Game/NPCs/Animations/Assets/Biel/Dialogue/Rat_Screw/Loosing-Players_Advantage/Biel_Idle_4_Base_Pose_Play_Biel_58
+MRUItem0=/Game/UI/Diegetic/Main_Games/WBP_TextPopUp
+MRUItem1=/Game/UI/Diegetic/Main_Games/WBP_Unique_Card_Indicator_Text
+MRUItem2=/Game/UI/Non_Diegetic/Button_Prompts/Enum_Button_Prompt
+MRUItem3=/Game/Maps/Main_Level/Main_Level
+MRUItem4=/Game/NPCs/Animations/Assets/Biel/Dialogue/Game_Invitations/Biel_Idle_4_Base_pose_Sofa_Play_Biel_154
+MRUItem5=/Game/NPCs/Animations/Assets/Biel/Dialogue/NPC-NPC/Biel_Idle_4_Base_Pose_Sofa_Dialogues_B2D_Biel_73
+MRUItem6=/Game/NPCs/Animations/Assets/Biel/Dialogue/NPC-NPC/Biel_Idle_4_Base_Pose_Sofa_Dialogues_B2D_Biel_74
+MRUItem7=/Game/NPCs/BPI_NPC_Opponent
+MRUItem8=/Game/NPCs/Animations/Assets/Biel/Dialogue/Game_Invitations/Biel_Idle_4_Base_Pose_Sofa_Play_Biel_11
+MRUItem9=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_108_to_Biel
+MRUItem10=/Game/UI/Diegetic/Menus/BP_Main_Menu
+MRUItem11=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_13_to_Dante
+MRUItem12=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_6_to_Biel
+MRUItem13=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_2_to_Biel
+MRUItem14=/Game/UI/Diegetic/NPCs/WBP_NPC_Game_Availability_Indicator
+MRUItem15=/Game/NPCs/Animations/Assets/Zilia/Idle/zilia_pose_drinking
+MRUItem16=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_5_to_Biel
+MRUItem17=/Game/NPCs/Animations/Assets/Dante/Dante_drink_making
+MRUItem18=/Game/NPCs/Animations/BP_Play_Animation_Sound
+MRUItem19=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_60_to_Zilia
+MRUItem20=/Game/NPCs/Dialogue_Specific/BP_NPC_Conversation_Manager
+MRUItem21=/Game/NPCs/Animations/Assets/Biel/Dialogue/React_To_Player/Biel_Idle_4_Base_Pose_Play_Biel_24
+MRUItem22=/Game/NPCs/Animations/Assets/Biel/Idle_Bar/Biel_Idle_1_Base_Pose_Bar_Breathe
+MRUItem23=/Game/NPCs/Animations/Assets/Biel/Idle_Bar/Biel_Idle_2_Base_Pose_Bar_Queezy
+MRUItem24=/Game/NPCs/Animations/Assets/Biel/Idle_Bar/Biel_Idle_3_Base_Pose_Bar_Leg_Cross
+MRUItem25=/Game/NPCs/Animations/Assets/Biel/Idle_Sofa/Biel_Idle_4_Base_Pose_Sofa_Play
+MRUItem26=/Game/NPCs/Animations/Assets/Biel/Idle_Sofa/Biel_Idle_3_Base_Pose_Sofa_Lay_Back
+MRUItem27=/Game/NPCs/Animations/Assets/Biel/Idle_Sofa/Biel_Idle_2_Base_Pose_Sofa_Sleep
+MRUItem28=/Game/NPCs/Animations/Assets/Biel/Idle_Sofa/Biel_Idle_1_Base_Pose_Sofa_Breathe
 
 [DetailCategories]
 GeneralProjectSettings.About=True
@@ -4370,6 +4350,7 @@ None=======
 /Game/UI/Non_Diegetic/Button_Prompts/Enum_Button_Prompt.Enum_Button_Prompt=1
 /Game/UI/Non_Diegetic/Button_Prompts/WBP_Pool_Prompts.WBP_Pool_Prompts=1
 /Game/UI/Non_Diegetic/Button_Prompts/WBP_Rat_Screw_Prompts.WBP_Rat_Screw_Prompts=1
+/Game/UI/Diegetic/Main_Games/WBP_Unique_Card_Indicator_Text.WBP_Unique_Card_Indicator_Text=1
 
 [DetailCategoriesAdvanced]
 WorldSettings.PrecomputedVisibility=False
@@ -4778,7 +4759,7 @@ WindowSize=X=1394.000 Y=936.000
 InitiallyMaximized=True
 
 [Directories2]
-UNR=../../../../GitHub/7-Sins/Project_7_Sins/Content/Maps/Main_Level
+UNR=../../../../../GitHub/7-Sins/Project_7_Sins/Content/Maps/Main_Level
 BRUSH=../../../../Users/ASUS/Documents/GitHub/7-Sins/Project_7_Sins/Content/
 FBX=../../../../Users/ASUS/Documents/GitHub/7-Sins/Project_7_Sins/Content/
 FBXAnim=../../../../Users/ASUS/Documents/GitHub/7-Sins/Project_7_Sins/Content/
@@ -4796,13 +4777,13 @@ LastDirectory=
 None=======
 None=======
 None=======
+RecentsFiles=D:/Unreal/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=E:/UE5/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
-RecentsFiles=D:/Unreal/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [SelectionDetails]
 PreserveScaleRatio=True
