--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -550,7 +550,7 @@ ContentBrowserTab2.ThumbnailSize=2
 ContentBrowserTab2.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/Maps/Test_Level/ThirdPersonMap
+LastLevel=/Game/Maps/Main_Level/Main_Level
 
 [ModuleFileTracking]
 Project_7_Sins.TimeStamp=2025.03.22-16.28.40
@@ -1640,7 +1640,7 @@ PhysicsAssetEditor.LastCompileMethod=Unknown
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.ForegroundColor\" \"Object.Appearance.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+Object="\"Object\" "
 GeneralProjectSettings="\"Object\" "
 CryptoKeysSettings="\"Object\" "
 GameplayTagsSettings="\"Object\" "
@@ -1991,8 +1991,10 @@ MediaPlayer="\"Object\" "
 WBP_Auction_Prompts_C="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=MaterialInstanceEditor
+RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -2021,15 +2023,6 @@ RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-OpenAssetsAtExit=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Button_Prompt.WBP_Button_Prompt
-OpenAssetsAtExit=/Game/UI/Non_Diegetic/Button_Prompts/Enum_Button_Prompt.Enum_Button_Prompt
-OpenAssetsAtExit=/Game/UI/Non_Diegetic/Button_Prompts/WBP_IDI_Prompts.WBP_IDI_Prompts
-OpenAssetsAtExit=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Auction_Prompts.WBP_Auction_Prompts
-OpenAssetsAtExit=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Bar_Prompts.WBP_Bar_Prompts
-OpenAssetsAtExit=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Pool_Prompts.WBP_Pool_Prompts
-OpenAssetsAtExit=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Rat_Screw_Prompts.WBP_Rat_Screw_Prompts
 None=======
 None=======
 None=======
@@ -2053,36 +2046,36 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/Maps/Test_Level/ThirdPersonMap.ThirdPersonMap", ()))
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Rat_Screw_Prompts
-MRUItem1=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Pool_Prompts
-MRUItem2=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Bar_Prompts
-MRUItem3=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Auction_Prompts
-MRUItem4=/Game/UI/Non_Diegetic/Button_Prompts/WBP_IDI_Prompts
-MRUItem5=/Game/UI/Non_Diegetic/Button_Prompts/Enum_Button_Prompt
-MRUItem6=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Button_Prompt
-MRUItem7=/Game/UI/Diegetic/Main_Games/WBP_Card_Display
-MRUItem8=/Game/Movies/Glow_Final_Word
-MRUItem9=/Game/Movies/Startup_Vid
-MRUItem10=/Game/Player/Input/IMC/IMC_Rules
-MRUItem11=/Game/Player/Input/IMC/IMC_Rat_Screw
-MRUItem12=/Game/Player/Input/IMC/IMC_Pool
-MRUItem13=/Game/Player/Input/IMC/IMC_Main_Menu
-MRUItem14=/Game/Player/Input/IMC/IMC_I_Doubt_It
-MRUItem15=/Game/Player/Input/IMC/IMC_Darts
-MRUItem16=/Game/Player/Input/IMC/IMC_Bar
-MRUItem17=/Game/Player/Input/IMC/IMC_Auction
-MRUItem18=/Game/NPCs/Animations/Assets/Biel/Dialogue/Game_Invitations/Biel_Idle_4_Base_pose_Sofa_Play_Biel_154
-MRUItem19=/Game/NPCs/Animations/Assets/Biel/Dialogue/NPC-NPC/Biel_Idle_4_Base_Pose_Sofa_Dialogues_B2D_Biel_73
-MRUItem20=/Game/NPCs/Animations/Assets/Biel/Dialogue/NPC-NPC/Biel_Idle_4_Base_Pose_Sofa_Dialogues_B2D_Biel_74
-MRUItem21=/Game/NPCs/BPI_NPC_Opponent
-MRUItem22=/Game/NPCs/Animations/Assets/Biel/Dialogue/Game_Invitations/Biel_Idle_4_Base_Pose_Sofa_Play_Biel_11
-MRUItem23=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_108_to_Biel
-MRUItem24=/Game/UI/Diegetic/Menus/BP_Main_Menu
-MRUItem25=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_13_to_Dante
-MRUItem26=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_6_to_Biel
-MRUItem27=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_2_to_Biel
-MRUItem28=/Game/UI/Diegetic/NPCs/WBP_NPC_Game_Availability_Indicator
-MRUItem29=/Game/NPCs/Animations/Assets/Zilia/Idle/zilia_pose_drinking
+MRUItem0=/Game/Environment/Street_Assets/Materials/graffiti_decals/wine
+MRUItem1=/Game/Environment/Street_Assets/Materials/graffiti_decals/wine1
+MRUItem2=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Rat_Screw_Prompts
+MRUItem3=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Pool_Prompts
+MRUItem4=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Bar_Prompts
+MRUItem5=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Auction_Prompts
+MRUItem6=/Game/UI/Non_Diegetic/Button_Prompts/WBP_IDI_Prompts
+MRUItem7=/Game/UI/Non_Diegetic/Button_Prompts/Enum_Button_Prompt
+MRUItem8=/Game/UI/Non_Diegetic/Button_Prompts/WBP_Button_Prompt
+MRUItem9=/Game/UI/Diegetic/Main_Games/WBP_Card_Display
+MRUItem10=/Game/Movies/Glow_Final_Word
+MRUItem11=/Game/Movies/Startup_Vid
+MRUItem12=/Game/Player/Input/IMC/IMC_Rules
+MRUItem13=/Game/Player/Input/IMC/IMC_Rat_Screw
+MRUItem14=/Game/Player/Input/IMC/IMC_Pool
+MRUItem15=/Game/Player/Input/IMC/IMC_Main_Menu
+MRUItem16=/Game/Player/Input/IMC/IMC_I_Doubt_It
+MRUItem17=/Game/Player/Input/IMC/IMC_Darts
+MRUItem18=/Game/Player/Input/IMC/IMC_Bar
+MRUItem19=/Game/Player/Input/IMC/IMC_Auction
+MRUItem20=/Game/NPCs/Animations/Assets/Biel/Dialogue/Game_Invitations/Biel_Idle_4_Base_pose_Sofa_Play_Biel_154
+MRUItem21=/Game/NPCs/Animations/Assets/Biel/Dialogue/NPC-NPC/Biel_Idle_4_Base_Pose_Sofa_Dialogues_B2D_Biel_73
+MRUItem22=/Game/NPCs/Animations/Assets/Biel/Dialogue/NPC-NPC/Biel_Idle_4_Base_Pose_Sofa_Dialogues_B2D_Biel_74
+MRUItem23=/Game/NPCs/BPI_NPC_Opponent
+MRUItem24=/Game/NPCs/Animations/Assets/Biel/Dialogue/Game_Invitations/Biel_Idle_4_Base_Pose_Sofa_Play_Biel_11
+MRUItem25=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_108_to_Biel
+MRUItem26=/Game/UI/Diegetic/Menus/BP_Main_Menu
+MRUItem27=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_13_to_Dante
+MRUItem28=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_6_to_Biel
+MRUItem29=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_2_to_Biel
 
 [DetailCategories]
 GeneralProjectSettings.About=True
@@ -4462,6 +4455,8 @@ None=======
 /Game/Movies/Startup_Vid.Startup_Vid=1
 /Game/Movies/Glow_Final_Word.Glow_Final_Word=1
 /Game/UI/Diegetic/Main_Games/WBP_Card_Display.WBP_Card_Display=1
+/Game/Environment/Street_Assets/Materials/graffiti_decals/wine1.wine1=1
+/Game/Environment/Street_Assets/Materials/graffiti_decals/wine.wine=1
 
 [DetailCategoriesAdvanced]
 WorldSettings.PrecomputedVisibility=False
@@ -4689,7 +4684,7 @@ bShowGrid=False
 [MaterialInstanceEditor]
 bShowGrid=True
 bDrawGrid=False
-PrimType=2
+PrimType=3
 
 [/Script/UnrealEd.MaterialStatsOptions]
 bPlatformUsed[0]=0
@@ -4859,7 +4854,7 @@ PrimType=2
 ScreenPosition=X=278.000 Y=34.000
 ScreenPosition=X=313.000 Y=62.000
 ScreenPosition=X=384.000 Y=147.000
-ScreenPosition=X=41.000 Y=340.000
+ScreenPosition=X=40.800 Y=340.000
 None=======
 None=======
 None=======
@@ -4868,17 +4863,17 @@ None=======
 WindowSize=X=1287.000 Y=909.000
 WindowSize=X=1306.000 Y=927.000
 WindowSize=X=1287.000 Y=909.000
-WindowSize=X=1394.000 Y=936.000
+WindowSize=X=1396.800 Y=939.200
 InitiallyMaximized=True
 
 [Directories2]
-UNR=../../../../../../Users/harry/Documents/Uni/Advanced Specialised Project/7-Sins/Project_7_Sins/Content/Maps/Main_Level
+UNR=../../../../Users/ASUS/Documents/GitHub/7-Sins/Project_7_Sins/Content/Maps/Main_Level
 BRUSH=../../../../Users/ASUS/Documents/GitHub/7-Sins/Project_7_Sins/Content/
 FBX=../../../../Users/ASUS/Documents/GitHub/7-Sins/Project_7_Sins/Content/
 FBXAnim=../../../../Users/ASUS/Documents/GitHub/7-Sins/Project_7_Sins/Content/
 GenericImport=../../../../Users/ASUS/Downloads/Eyes-Tongue-Teeth-Shirt-Necklace_lambert3SG_Emissive.png
 GenericExport=../../../../Users/ASUS/Documents/GitHub/7-Sins/Project_7_Sins/Content/
-GenericOpen=
+GenericOpen=../../../../Users/ASUS/Documents/GitHub/7-Sins/Project_7_Sins/Content/
 GenericSave=../../../../Users/ASUS/Documents/GitHub/7-Sins/Project_7_Sins/Content/
 MeshImportExport=../../../../Users/ASUS/Documents/GitHub/7-Sins/Project_7_Sins/Content/
 WorldRoot=../../../../Users/ASUS/Documents/GitHub/7-Sins/Project_7_Sins/Content/
@@ -4890,11 +4885,11 @@ LastDirectory=
 None=======
 None=======
 None=======
+RecentsFiles=C:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=C:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=E:/UE5/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
-RecentsFiles=C:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
-RecentsFiles=C:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/Unreal/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
