Packaging fixes. Tweaks for cat. Jukebox fixes. Play animation sound anim notify fixed.
Bunch of packaging fixes.
Some tweaks for the cat actors.
Jukebox fix for playing audio on begin play every single time.
Play animation sound notify new way of doing it so not reset on engine launch.

--- a/Project_7_Sins/Config/DefaultGame.ini
+++ b/Project_7_Sins/Config/DefaultGame.ini
@@ -52,6 +52,7 @@ bCookAll=False
 bCookMapsOnly=False
 bSkipEditorContent=False
 bSkipMovies=False
++UFSMovies=For Game
 -IniKeyDenylist=KeyStorePassword
 -IniKeyDenylist=KeyPassword
 -IniKeyDenylist=rsa.privateexp
@@ -95,5 +96,5 @@ bSkipMovies=False
 [/Script/MoviePlayer.MoviePlayerSettings]
 bWaitForMoviesToComplete=False
 bMoviesAreSkippable=False
-+StartupMovies=Startup_Vid
++StartupMovies=For Game
 
